spelling: Activites -> Activities

--- a/example.yml
+++ b/example.yml
@@ -59,7 +59,7 @@ education:
       - Compiler Architecture
     highlights:
       - "*Thesis*: A convolutional neural network for predicting Greenland glacier melt and glacial water flow"
-      - "*Activites*: Debating, Chess, Cricket"
+      - "*Activities*: Debating, Chess, Cricket"
   - institution: Harvard University
     url:
     area: Computer Science
@@ -78,7 +78,7 @@ education:
       - Compiler Architecture
     highlights:
       - "*Thesis*: A convolutional neural network for predicting Greenland glacier melt and glacial water flow"
-      - "*Activites*: Debating, Chess, Cricket"
+      - "*Activities*: Debating, Chess, Cricket"
 
 affiliations:
   - organization: White Hat Hackers Association
