--- a/example.yml
+++ b/example.yml
@@ -1,4 +1,4 @@
-# yaml-language-server: $schema=https://raw.githubusercontent.com/jskherman/cv.typ/main/cv.typ.schema.json
+# yaml-language-server: $schema=./cv.typ.schema.json
 
 personal:
   name: John Smith L. Doe
@@ -132,15 +132,37 @@ publications:
     url: https://example.com
 
 projects:
-  - name: "Job Tailor"
+  - name: "Job Tailor w/ Tools & Affiliation"
     url: https://example.com/
     affiliation: Open University
+    tools: ["Typst", "JSON"]
+    startDate: 2018-01-01
+    endDate: 2019-04-30
+    highlights:
+      - Created an AI-powered resume editor application that allowed users to easily create different resumes and cover letters specifically tailored to and customized for individual job descriptions based on their personal information in their complete curriculum vitae.
+      - Acquired more than 100,000 user sign ups in 3 months and more than 10,000 active monthly users in its lifetime before being sold to investors.
+      - Generated profit of upwards \$20,000 yearly with a team of only four developers and three business operatives
+  - name: "Job Tailor w/ Affiliation"
+    url: https://example.com/
+    affiliation: Open University
+    tools:
     startDate: 2020-11-01
     endDate: 2021-04-30
     highlights:
       - Created an AI-powered resume editor application that allowed users to easily create different resumes and cover letters specifically tailored to and customized for individual job descriptions based on their personal information in their complete curriculum vitae.
       - Acquired more than 100,000 user sign ups in 3 months and more than 10,000 active monthly users in its lifetime before being sold to investors.
       - Generated profit of upwards \$20,000 yearly with a team of only four developers and three business operatives
+  - name: "Job Tailor w/ Tools"
+    url: https://example.com/
+    affiliation: 
+    tools: ["Typst", "JSON"]
+    startDate: 2019-05-01
+    endDate: 2020-07-30
+    highlights:
+      - Created an AI-powered resume editor application that allowed users to easily create different resumes and cover letters specifically tailored to and customized for individual job descriptions based on their personal information in their complete curriculum vitae.
+      - Acquired more than 100,000 user sign ups in 3 months and more than 10,000 active monthly users in its lifetime before being sold to investors.
+      - Generated profit of upwards \$20,000 yearly with a team of only four developers and three business operatives
+
 
 skills:
   - category: Soft Skills
