--- a/.editorconfig
+++ b/.editorconfig
@@ -4,19 +4,18 @@
 
 root = true
 
-[*.typ]
-end_of_line = lf
+[*]
 charset = utf-8
+end_of_line = lf
+indent_style = space
 trim_trailing_whitespace = true
 insert_final_newline = true
-indent_style = space
+
+[*.{rs,toml,json}]
 indent_size = 4
-max_line_length = 120
 
-[*.md]
-# double whitespace at end of line
-# denotes a line break in Markdown
-trim_trailing_whitespace = false
+[*.{typ,md}]
+indent_size = 2
 
-[*.yml]
+[*.{yml,yaml}]
 indent_size = 2
