chore: use local yaml schema
In my opinion, targeting master branch for a schema would be an issue if
we introduce a breaking changes to the schema. By using local schema, it
ensures that the current schema is in line with current cv.typ version.

--- a/template/cv-data.yml
+++ b/template/cv-data.yml
@@ -1,4 +1,4 @@
-# yaml-language-server: $schema=https://raw.githubusercontent.com/jskherman/cv.typ/main/cv.typ.schema.json
+# yaml-language-server: $schema=../cv.typ.schema.json
 
 personal:
   name: John Smith L. Doe
