--- a/typst.toml
+++ b/typst.toml
@@ -1,12 +1,20 @@
 [package]
 name = "imprecv"
 version = "0.5.0"
-entrypoint = "lib.typ"
-authors = ["Typst GmbH <https://typst.app>"]
-license = "MIT-0"
-description = "An IEEE-style paper template to publish at conferences and journals for Electrical Engineering, Computer Science, and Computer Engineering"
+compiler = "0.11.0"
+entrypoint = "cv.typ"
+authors = ["Je Sian Keith Herman <https://jskherman.com>"]
+license = "Apache-2.0"
+description = "A no-frills curriculum vitae (CV) template using Typst and YAML to version control CV data."
+keywords = ["CV", "Curriculum Vitae", "Resume", "Minimalistic", "Professional", "YAML", "Data"]
+categories = ["cv"]
+disciplines = []
+exclude = ["makefile", ".editorconfig", "assets/*"]
+homepage = "https://github.com/jskherman/imprecv"
+repository = "https://github.com/jskherman/imprecv"
+
 
 [template]
 path = "template"
-entrypoint = "main.typ"
-thumbnail = "thumbnail.png"
+entrypoint = "template.typ"
+thumbnail = "assets/thumbnail.1.png"
