fix: hanging second lin "Job Tailor" project

--- a/template/template.yml
+++ b/template/template.yml
@@ -131,7 +131,7 @@ projects:
     startDate: 2020-11-01
     endDate: 2021-04-30
     highlights:
-      - Developed an AI-powered résumé editor app to create tailored résumés from users' comprehensive CVs based on specific job descriptions.
+      - Developed an AI-powered résumé editor app to create tailored résumés from users' CVs based on specific job descriptions.
       - Acquired more than 100,000 user sign ups in 3 months and more than 10,000 active monthly users.
       - Generated profit of upwards \$20,000 yearly with a team of only four developers and three business operatives
 
